# AndroidForDirk

./: 1.txt
AndroidMisc/: .gitignore  AndroidMisc.ipr  README.md
AndroidMisc/app/: AndroidManifest.xml  project.properties
AndroidMisc/app/res/drawable/: selector_start_record.xml  selector_stop_record.xml  shape_start_record_normal.xml  shape_start_record_press.xml  shape_stop_record_normal.xml  shape_stop_record_press.xml
AndroidMisc/app/res/layout/: fragment_audiotrack_record.xml  fragment_copy_traces.xml  fragment_jni_hook.xml  fragment_launcher.xml  fragment_mediorecorder_audio.xml  fragment_packages.xml  fragment_split_profile.xml  fragment_system_info.xml  fragment_take_picture.xml  layout_entry_item.xml  layout_info_item.xml  layout_package_item.xml  main_activity.xml
AndroidMisc/app/res/values/: strings.xml
AndroidMisc/app/src/com/winomtech/androidmisc/app/: MMApplication.java
AndroidMisc/app/src/com/winomtech/androidmisc/audio/: PcmRecorder.java  WavWriter.java
AndroidMisc/app/src/com/winomtech/androidmisc/plugin/: PluginManager.java
AndroidMisc/app/src/com/winomtech/androidmisc/ui/: AudioTrackRecordFragment.java  CopyTracesFragment.java  JniHookFragment.java  LauncherFragment.java  MainActivity.java  MediaRecorderAudioFragment.java  PackagesFragment.java  SystemInfoFragment.java  (+1 more)
AndroidMisc/jni/: AndroidManifest.xml  build.xml  project.properties
AndroidMisc/jni/jni/: Android.mk  CMakeLists.txt  JniHook.cpp  SilkCodec.cpp
AndroidMisc/jni/jni/include/: Common.h
AndroidMisc/jni/res/layout/: main.xml
AndroidMisc/sdk/: AndroidManifest.xml
(+15 files in other folders)
